# rps

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  _test_rps_runner.py  pyproject.toml  rps.py  setup.cfg
.github/workflows/: tests.yml
chanwookim_rps.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
rps.egg-info/: PKG-INFO  SOURCES.txt
src/chanwookim_rps/: __init__.py
src/chanwookim_rps.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: _test_rps_runner.py  test_rps.py
