[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chanwookim-rps"
version = "0.0.1"
description = "Simple rock-paper-scissors CLI"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
rps = "chanwookim_rps:main"

[tool.setuptools.packages.find]
where = ["src"]