[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chanwookim-rps"
version = "0.1.0"
description = "A simple and fun rock-paper-scissors CLI game with score tracking"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "chanwookim0716", email = "contact@example.com"}
]
keywords = ["game", "rock-paper-scissors", "cli", "interactive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
]

[project.urls]
Homepage = "https://github.com/chanwookim0716/chanwookim-rps"
Repository = "https://github.com/chanwookim0716/chanwookim-rps.git"
Changelog = "https://github.com/chanwookim0716/chanwookim-rps/blob/main/CHANGELOG.md"
Issues = "https://github.com/chanwookim0716/chanwookim-rps/issues"

[project.scripts]
rps = "chanwookim_rps:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

