[metadata]
name = rps
version = 0.0.1
description = Simple rock-paper-scissors CLI
long_description = file: README.md
long_description_content_type = text/markdown
author = chanwookim0716
license = MIT

[options]
py_modules = rps
python_requires = >=3.8

[options.entry_points]
console_scripts =
    rps = rps:main
