[metadata]
name = chanwookim-rps
version = 0.1.0
description = Simple rock-paper-scissors CLI game
long_description = file: README.md
long_description_content_type = text/markdown
author = chanwookim0716
license = MIT
url = https://github.com/chanwookim0716/chanwookim-rps

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rps = chanwookim_rps:main

